--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ h1{
 #logo{
     background-color: deeppink;
 }
-.1{
-font-color:red;
+.Neo{
+color:red;
 }
-.1:hover {
-font-color:skyblue;
+.Neo:hover {
+color:skyblue;
 }
