--- a/style.css
+++ b/style.css
@@ -11,7 +11,12 @@ h1{
 color:red;
 font: size 40px;
 font-family: fantasy;
-}
+text-align: center;
+
 .Neo:hover {
 color:skyblue;
+}
+.matrix{
+    text-align: center;
+   
 }
